--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,11 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: (b)Log di vita (mia [a caso])
+email: mantop78@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+ per me, senza nessun motivo particolare, senza continuità, senza ads, se ci siete finiti per caso
+ andate via. Ciao
 baseurl: "/mantop78" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  mantop78
