--- a/_config.yml
+++ b/_config.yml
@@ -18,11 +18,11 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: (b)Log di vita (mia [a caso])
+title: (b)log di vita (la mia)
 email: mantop78@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
- per me, senza nessun motivo particolare, senza continuità, senza ads, se ci siete finiti per caso
- andate via. Ciao
+ per me, senza nessun motivo particolare, senza continuità, senza ads, che ci siate finiti per caso,
+ o meno, andate via. Ciao
 baseurl: "/mantop78" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  mantop78
