--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,8 @@ title: (b)log di vita (la mia)
 email: mantop78@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
  per me, senza nessun motivo particolare, senza continuità, senza ads, che ci siate finiti per caso,
- o meno, andate via. Ciao
+ o meno, andate via :p
+ Ciao
 baseurl: "/mantop78" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  mantop78
