--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: (b)log di vita (la mia)
+title: what's happyning
 email: mantop78@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
- per me, senza nessun motivo particolare, senza continuità, senza ads, che ci siate finiti per caso,
- o meno, andate via :p
- Ciao
+ per me, senza nessun motivo particolare, senza continuità, senza ads, non compro nulla, andate via.
 baseurl: "/mantop78" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  mantop78
