--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: what's happyning
 email: mantop78@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
- per me, senza nessun motivo particolare, senza continuità, senza ads, non compro nulla, andate via.
+ blog, nessun motivo particolare, senza continuità, senza ads, non compro nulla, andate via.
 baseurl: "/mantop78" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  mantop78
